# auto-work

./: .gitignore  pyproject.toml  pytest.ini
app/clawing/: melon.py  yes24.py
app/smtp/: email.py
tests/: test_clawing_melon.py  test_clawing_yes24.py  test_naver_stmp.py
